RESOLVED FIXED 221978
Treat <ratio> that ends with forward slash as invalid
https://bugs.webkit.org/show_bug.cgi?id=221978
Summary Treat <ratio> that ends with forward slash as invalid
Rob Buis
Reported 2021-02-16 11:24:10 PST
Treat <ratio> that ends with forward slash as invalid.
Attachments
Patch (4.52 KB, patch)
2021-02-16 11:29 PST, Rob Buis
no flags
Rob Buis
Comment 1 2021-02-16 11:29:39 PST
EWS Watchlist
Comment 2 2021-02-16 11:30:22 PST
This patch modifies the imported WPT tests. Please ensure that any changes on the tests (not coming from a WPT import) are exported to WPT. Please see https://trac.webkit.org/wiki/WPTExportProcess
Manuel Rego Casasnovas
Comment 3 2021-02-18 00:18:47 PST
Comment on attachment 420509 [details] Patch r=me
EWS
Comment 4 2021-02-18 00:38:21 PST
Committed r273068: <https://commits.webkit.org/r273068> All reviewed patches have been landed. Closing bug and clearing flags on attachment 420509 [details].
Radar WebKit Bug Importer
Comment 5 2021-02-18 00:39:13 PST
Note You need to log in before you can comment on or make changes to this bug.