Treat <ratio> that ends with forward slash as invalid https://bugs.webkit.org/show_bug.cgi?id=221978

Patch by Rob Buis <rbuis@igalia.com> on 2021-02-18
Reviewed by Manuel Rego Casasnovas.

LayoutTests/imported/w3c:

* web-platform-tests/css/css-sizing/aspect-ratio/parsing/aspect-ratio-invalid-expected.txt:
* web-platform-tests/css/css-sizing/aspect-ratio/parsing/aspect-ratio-invalid.html:

Source/WebCore:

Treat <ratio> that ends with forward slash as invalid:
https://drafts.csswg.org/css-values-4/#ratio-value

Test: imported/w3c/web-platform-tests/css/css-sizing/aspect-ratio/parsing/aspect-ratio-invalid.html

* css/parser/CSSPropertyParser.cpp:
(WebCore::consumeAspectRatio):

Canonical link: https://commits.webkit.org/234266@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@273068 268f45cc-cd09-0410-ab3c-d52691b4dbfc